static/fairy-l2.css
/* This is 3 column grid used by Layer 2 */

.fairy-grid {
    display: grid;
    width: 100%;
    height: 100%;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(1, 1fr);
    padding: 10px;
    gap: 10px;
}

.fairy-grid img {
    max-width: 300px;
}

/* Assigning Elements (Variants Buttons) Grid Area  */

.generic-fairy {
    grid-column: 1/2;
}

/* Undoing the text transform uppercase for buttons  */

.generic-fairy .variant-category-description {
    text-transform: none;
    }

/* Variant Title and Logo next to it  */

.variant-title-l2 {
    /* border: 1px solid red; */
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    font-size: 0.80rem;
    font-weight: 300;
}

#layer2fairycont .variant-title-l2 {
    margin-bottom: 15px;
}

/* Icons of zh, 960 and zh960 options for some variants in Fairy  */

.option-icon-container {
    margin-left: 5px;
    margin-top: -10px;
    width: 80%;
    display: flex;
    /* border: 1px solid red; */
    margin-bottom: 15px;
    align-items: flex-end;
}

.option-icon-container img {
    width: 15px;
    height: 15px;
    margin: 3px 2px 2px 2px;
    filter: saturate(0.1);
}

/* Short text below Variant Titles in Layer 2  */

.variant-extra-info {
    font-size: 1.1em;
    width: 80%;
    padding: 5px 0;
    text-align: left;
    text-transform: none;
}

/* Fairy and Army four pieces Image  */

.fourarmykings img { 
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px;
    filter: saturate(0.9);
    opacity: 0.7;
    max-height: 80px;
    margin: 0 auto;
    height: 100%;
    width: 100%;
}

/* TABLET AND MOBILE  */

@media only screen and (max-width:1100px) {
    .button-grid {
        grid-column: 1/3;
    }

    .fairy-grid {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }

    .generic-fairy {
        grid-column: 1/3;
    }

    .generic-image-container {
        display: none;
    }
   
    .variant-title-l2 {
        padding: 0;
        margin: 0;
    }

    /* Individual Fixes */

    .variant-extra-info {
        font-size: 1em;
        padding: 0;
    }

    #layer2fairycont #mainboard {
        display: none;
    }

    .layer-two-category-info {
        justify-content: center; 
    }

    /* Go back button remove bg */ 

    .fairy-grid .generic-variant-info {
        background: none;
    }
}

@media only screen and (min-width: 1100px) {
    #layer2fairycont .variant-category-description, #layer2armycont .variant-category-description {
        margin-top: -30px;
        font-size: 1.1rem;
    }

    #layer2fairycont .generic-image-container, #layer2armycont .generic-image-container {
        margin-top: -45px;
    }
}

